Improve BenchmarkPagesSerde for block-size sensitivity
Use mixed VARCHAR/BIGINT/DOUBLE pages and hold the per-op payload
constant at ~16 MB so MB/s comparisons across configurations are
direct. Propagate --add-modules=jdk.incubator.vector to the JMH
fork; without it BlockEncodingSimdSupport fails to initialise.

(cherry picked from commit 3eba09028ec4880750e14abf428474529458ed40)